corrected layout problem on desktop

--- a/themes/airspace-hugo/assets/scss/templates/_product.scss
+++ b/themes/airspace-hugo/assets/scss/templates/_product.scss
@@ -694,7 +694,7 @@
 }
 .our-products .product-item p {
   min-height: 90px !important;
-  height: inherit !important;
+  /*height: inherit !important;*/
 }
 
 .submenu h4 {
